--- a/app/resources/css/app.css
+++ b/app/resources/css/app.css
@@ -1,6 +1,6 @@
 @import "fomantic-ui/dist/semantic.css";
 
 /* seu design */
-body {
-  background-color: #f8fafc;
+.teste {
+  background-color: #fa0000;
 }
