feat: style aba de planejamento

--- a/app/resources/views/layout/main.twig
+++ b/app/resources/views/layout/main.twig
@@ -9,7 +9,10 @@
 		{{ vite('js/app.js')|raw }}
 	</head>
 
-	<body class="teste"> {% block content %}{% endblock %}
 
+	<body>
+		{% include 'layout/sidebar.twig' %}
+		<main class="main-content"> {% block content %}{% endblock %}
+			</main>
 		</body>
 	</html>
