--- a/app/Resources/views/layout/main.twig
+++ b/app/Resources/views/layout/main.twig
@@ -6,11 +6,13 @@
 		<title>{{ title ?? 'DevBox' }}</title>
 
 		{# CDN - Fomantic UI CSS #}
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.3/dist/semantic.min.css">
-		
+		<link
+		rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.3/dist/semantic.min.css">
+
 		{# CDN - Boxicons #}
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@2.1.4/css/boxicons.min.css">
-		
+		<link
+		rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@2.1.4/css/boxicons.min.css">
+
 		{# CSS Customizado #}
 		<link rel="stylesheet" href="{{ url('assets/css/app.css') }}">
 		<link rel="stylesheet" href="{{ url('assets/css/navbar.css') }}">
@@ -18,22 +20,21 @@
 
 	<body>
 		{% include 'layout/sidebar.twig' %}
-		<main class="main-content">
-			{% block content %}{% endblock %}
-		</main>
+		<main class="main-content"> {% block content %}{% endblock %}
+			</main>
 
-		{# CDN - jQuery #}
-		<script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
-		
-		{# CDN - Fomantic UI JS #}
-		<script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.3/dist/semantic.min.js"></script>
-		
-		{# CDN - SortableJS (Drag and Drop) #}
-		<script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
-		
-		{# JS Customizado #}
-		<script src="{{ url('assets/js/navbar.js') }}"></script>
-		<script src="{{ url('assets/js/dragdrop.js') }}"></script>
-		<script src="{{ url('assets/js/app.js') }}"></script>
-	</body>
-</html>
+			{# CDN - jQuery #}
+			<script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
+
+			{# CDN - Fomantic UI JS #}
+			<script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.3/dist/semantic.min.js"></script>
+			'
+			{# CDN - SortableJS (Drag and Drop) #}
+			<script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
+
+			{# JS Customizado #}
+			<script src="{{ url('assets/js/navbar.js') }}"></script>
+			<script src="{{ url('assets/js/dragdrop.js') }}"></script>
+			<script src="{{ url('assets/js/app.js') }}"></script>
+		</body>
+	</html>
