--- a/app/Resources/views/layout/main.twig
+++ b/app/Resources/views/layout/main.twig
@@ -33,8 +33,9 @@
 			<script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
 
 			{# JS Customizado #}
+			<script src="{{ url('assets/js/app.js') }}"></script>
 			<script src="{{ url('assets/js/navbar.js') }}"></script>
 			<script src="{{ url('assets/js/dragdrop.js') }}"></script>
-			<script src="{{ url('assets/js/app.js') }}"></script>
+			<script src="{{ url('assets/js/board.js') }}"></script>
 		</body>
 	</html>
