--- a/app/Resources/views/main.twig
+++ b/app/Resources/views/main.twig
@@ -16,6 +16,7 @@
 		{# CSS Customizado #}
 		<link rel="stylesheet" href="{{ url('assets/css/app.css') }}">
 		<link rel="stylesheet" href="{{ url('assets/css/navbar.css') }}">
+		<link rel="stylesheet" href="{{ url('assets/css/modal.css') }}">
 	</head>
 
 	<body>
